[package]
name = "w07-c2-encoder"
version = "0.1.0"
authors = ["Anson <git@anson-cheung.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ascii = "1.0"  # Removed from std a while back
libc = "0.2.67"  # Use for calling ctype

[profile.release]
opt-level = 3
lto = "on"